<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.SecondScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="550dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.8"
        android:scaleType="fitXY"
        android:src="@drawable/onboarding2" />
    <TextView
        android:id="@+id/description2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:layout_weight="1.9"
        android:text="@string/secondscreen1"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/description3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:layout_weight="1.9"
        android:text="@string/secondscreen2"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/next2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/next"
        android:layout_marginRight="50dp"
        android:layout_gravity="end"
        android:layout_weight="1.9"
        android:gravity="end"
        android:textSize="22sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.9">

    </View>
</LinearLayout>